# Summarizer

./: .env.example  .gitignore  AGENTS.md  README.md  llm.py  main.py  pyproject.toml  requirements.txt  summarizer.py  test_ollama.py  test_summarizer.py  webapp.py
demo/: README.md  ticket-48190-password-reset.json  ticket-48213-billing-dispute.json
docs/: AI 340 ARTIFACTS HANDOUT.md  spec-bundle-customer-support-summarizer.md
src/summarizer/: __init__.py  core.py  llm.py  main.py  webapp.py
src/summarizer/templates/: index.html  styles.css
tests/: test_redact_properties.py  test_summarizer.py  test_webapp.py
tests/fixtures/: ticket-48190-password-reset.json  ticket-48213-billing-dispute.json
